objects/AIA_Benefit_Design_Product__c.object
<CustomObject>
    <fields>
        <fullName>ACIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Claim Interest</inlineHelpText>
        <label>ACIN</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_Name__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.ADR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AE_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Name Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIAI__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Admin  Information</inlineHelpText>
        <label>AIAI</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Dollar_Penalty__c</fullName>
        <inlineHelpText>To be completed for self-insured medical plans.  Enter the dollar penalty amount.</inlineHelpText>
        <label>Dollar Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_INN_Contracted_Provider_Penalty__c</fullName>
        <label>INN or Contracted Provider Penalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% BC provider</fullName>
                </value>
                <value>
                    <fullName>Same as  OON member penalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>CFBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Magellan_Behavioral_Health__c</fullName>
        <label>Magellan Behavioral Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueChoice</fullName>
                </value>
                <value>
                    <fullName>BlueChoice ADV</fullName>
                </value>
                <value>
                    <fullName>BluePreferred</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue ADV</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue HMO</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Percent_Penalty__c</fullName>
        <inlineHelpText>To be completed for self-insured medical plans.  Select a percentage penalty value.</inlineHelpText>
        <label>Percentage Penalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No member penalty</fullName>
                </value>
                <value>
                    <fullName>20% penalty</fullName>
                </value>
                <value>
                    <fullName>50% penalty</fullName>
                </value>
                <value>
                    <fullName>100% penalty</fullName>
                </value>
                <value>
                    <fullName>Other Nonstandard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Percent_and_Dollar_Penalty__c</fullName>
        <inlineHelpText>To be completed for self-insured medical plans.  Select a percentage and dollar penalty value.</inlineHelpText>
        <label>Percentage and Dollar Penalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No member penalty</fullName>
                </value>
                <value>
                    <fullName>20% penalty</fullName>
                </value>
                <value>
                    <fullName>50% penalty</fullName>
                </value>
                <value>
                    <fullName>100% penalty</fullName>
                </value>
                <value>
                    <fullName>Other Nonstandard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIA_Up_to__c</fullName>
        <inlineHelpText>To be completed for self-insured medical plans.  Enter the up to dollar penalty amount.</inlineHelpText>
        <label>Up to $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Name__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Opportunity__r.AM_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Name Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Phone_Drawloop__c</fullName>
        <formula>Service_Rep_Name_Drawloop__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Phone Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date1__c</fullName>
        <description>This field is used to copy the arc approval date from BRF and it is added in BD trigger helper</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ARC Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.ARC_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARC Approval Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.ARC_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccDrugName__c</fullName>
        <formula>Account_Specified_Drug_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccDrugName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMedicalName__c</fullName>
        <formula>Account_Specified_Medical_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccMedicalName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>Used for MEIDS integration - to pull the identity protection mandate. 2017 AIA May Release</description>
        <formula>Benefit_Design__r.Account__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Effective_Date10__c</fullName>
        <formula>IF(TEXT(Grandfathered_Status__c)='Grandfathered','N/A',IF(TEXT(Grandfathered_Status__c)='Non-Grandfathered', 
(IF(LEN(TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))&gt;1,TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)),
"0"+TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))+"/"+IF(LEN(TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))&gt;1,TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)),
"0"+TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))+"/"+TEXT(YEAR(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c))) ,null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Effective_Date11__c</fullName>
        <formula>IF(TEXT(Grandfathered_Status__c)='Grandfathered','N/A',IF(TEXT(Grandfathered_Status__c)='Non-Grandfathered', 
(IF(LEN(TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))&gt;1,TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)),
"0"+TEXT(MONTH(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))+"/"+IF(LEN(TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))&gt;1,TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)),
"0"+TEXT(DAY(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c)))+"/"+TEXT(YEAR(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c))) ,null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Effective_Date1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Product Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Specific_Dental_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specific Dental Product Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Drug_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Drug Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Medical_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Medical Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Specified_Vision_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Specified Vision Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Testing_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Testing Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Testing__c</fullName>
        <formula>IF( Benefit_Design__r.Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c = true, Benefit_Design__r.Parent_Account__r.Account_Legal_Name__c, Benefit_Design__r.Account__r.Account_Legal_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Benefit_Design__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accumulation_Period1__c</fullName>
        <description>Deleting existing formula field [Accumulation_Period__c - Text(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Period__c)] and replacing it with this field as per story B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accumulation Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accumulation_Period__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Benefit_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accumulation Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addition_of_Platform_Indicator__c</fullName>
        <label>Platform Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Market_Segments__c</fullName>
        <label>All Market Segments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large(1000+)</fullName>
                </value>
                <value>
                    <fullName>Large(200-999)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AllergySerums__c</fullName>
        <label>Allergy Serums</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Serums_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Allergy Serums Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Renewal_Date_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Account__r.Renewal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Renewal Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apply_Coinsurance_To_OOP__c</fullName>
        <label>Apply Coinsurance To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Copay_to_OOP__c</fullName>
        <label>Apply Copay to OOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Deductible_To_OOP__c</fullName>
        <label>Apply Deductible To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Per_Admission_to_OOP__c</fullName>
        <label>Apply Per Admission to OOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDP_Blue_Box_Drawloop__c</fullName>
        <description>This field is created for Drawloop and it is used in blue box of outputs</description>
        <formula>CASE(TEXT( Product_Category__c ), 
"Medical", "MED", 
"Drug", "DRG", 
"Dental", "DEN", 
"Vision", "VIS", 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP Blue Box Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDP_Header_Name_Drawloop__c</fullName>
        <formula>IF(TEXT( Product_Category__c ) = 'Medical','Medical Benefit Design Package',IF(TEXT(Product_Category__c) = 'Drug','Drug Benefit Design Package',IF(TEXT(Product_Category__c) = 'Vision','Vision Benefit Design Package',IF(TEXT(Product_Category__c) = 'Dental','Dental Benefit Design Package',''))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP Header Name Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDP_validations_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDP validations flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRCA_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRCA_Mandate_Description__c</fullName>
        <defaultValue>"Genetic Counseling and 'BRCA' testing to women whose family history is associated with an increased risk for deleterious mutations in the 'BRCA1' or 'BRCA2' genes."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>BRCA Mandate Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRCA__c</fullName>
        <label>BRCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRF_Juridiction__c</fullName>
        <formula>TEXT(Proposed_Products__r.Benefit_Request_Form__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Juridiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Network__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Standard_Network__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSBS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Benefit Summary</inlineHelpText>
        <label>BSBS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Form</label>
        <referenceTo>AIA_Benefit_Design_Form__c</referenceTo>
        <relationshipLabel>Benefit Design Products</relationshipLabel>
        <relationshipName>Benefit_Design_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Benefit Design Products</relationshipLabel>
        <relationshipName>BD_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Benefit_Period_Maximum__c</fullName>
        <label>Benefit Period Maximum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Period__c</fullName>
        <description>Benefit Period</description>
        <label>Benefit Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Selection_Description__c</fullName>
        <description>Benefit Selection Description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Benefit Selection Description</inlineHelpText>
        <label>Benefit Selection Description</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Benefit_Selection_Drawloop1__c</fullName>
        <defaultValue>"Full Exclusion:"+BR()+"- Female Sterilization"+BR()+"- Family Planning Services "+BR()+"- Contraceptive drugs (including Emergency Contraception) and devices, and any related medical devices"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Selection Drawloop1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Selection_Drawloop2__c</fullName>
        <defaultValue>"Emergency Contraception Exclusion:"+BR()+"- Emergency contraception and any related medical exams."</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Selection Drawloop2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Selection__c</fullName>
        <label>Benefit Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Exclusion</fullName>
                </value>
                <value>
                    <fullName>Emergency Contraception Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_Completed__c</fullName>
        <formula>(IF( Has_benefit_Details__c = True &amp;&amp; Plan_Name__r.QA_Complete__c = true, 
(IMAGE("/servlet/servlet.FileDownload?file=01560000001jIqv", "Start", 25, 25)), 
IF(Plan_Name__r.Has_Benefit_Summary__c = True, 
(IMAGE("/servlet/servlet.FileDownload?file=01560000001jKDl", "Start", 20, 20)), 
'Benefits not available')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefits Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Renew__c</fullName>
        <label>Benefits Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar year</fullName>
                </value>
                <value>
                    <fullName>Contract year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlueVision_Plus_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BlueVision Plus Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Rewards__c</fullName>
        <label>Blue Rewards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBCB__c</fullName>
        <defaultValue>"COB1"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>COB Rules</inlineHelpText>
        <label>CBCB</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type__c</fullName>
        <label>CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Type__c</fullName>
        <label>CDH Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HRA Integrated</fullName>
                </value>
                <value>
                    <fullName>HRA Non-Integrated</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH__c</fullName>
        <label>CDH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFLogo__c</fullName>
        <description>This field is used for Drawloop output as logo</description>
        <formula>IMAGE("/servlet/servlet.FileDownload?file=0150R0000005kGh","Dummy", 80, 320)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFLogo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cafeteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CareFirst_Formulary_Selection1__c</fullName>
        <description>Replacing existing formula field CareFirst_Formulary_Selection__c [ - Text(Benefit_Design__r.Benefit_Request_Form__r.Formulary__c)] with this field as per B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CareFirst Formulary Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CareFirst_Formulary_Selection__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Formulary__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CareFirst Formulary Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carve_Out_Integration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integrated - Rx Carved-Out Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Related_Medical__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From Related Medical</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cloned From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Common_Accident_Deductible__c</fullName>
        <label>Common Accident Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Control_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Control Plan Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_DM_Wellness__c</fullName>
        <label>Integrated WDM Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Network_Drawloop__c</fullName>
        <label>Count of Network Drawloop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_New__c</fullName>
        <label>Customization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non - Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAER__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Clinical Edit Admin</inlineHelpText>
        <label>DAER</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DECE__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Clinical Edit Criteria</inlineHelpText>
        <label>DECE</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHMO__c</fullName>
        <formula>ISPICKVAL(Plan_Name__r.Product_Sub_Category__c,"DHMO")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNAR__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Rules Dental</inlineHelpText>
        <label>DNAR</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPCG__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Dental Proc Categ Conv</inlineHelpText>
        <label>DPCG</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPDF__c</fullName>
        <defaultValue>"NP00"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Proc. Definition Dental</inlineHelpText>
        <label>DPDF</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUDN__c</fullName>
        <defaultValue>"DUP1"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Dup Claim Rules Dental</inlineHelpText>
        <label>DUDN</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeductibleAccumulatorMethod__c</fullName>
        <description>B-03464</description>
        <label>Deductible Accumulator Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>